<?xml version="1.0" encoding="utf-8"?>

<!-- Using ScrollView with Linear Layouts and 3 Card Views to display the information of the 3 hotels -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#673AB7"
        android:orientation="vertical"
        android:padding="16dp">

       <!-- Text of 'Stay$Life.com' -->
        <TextView
            android:id="@+id/txtHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtHeading"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />


        <!-- Hotel 1: Golden Retreat -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="#F4E658"
            app:cardBackgroundColor="#E0DBA7"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:id="@+id/txtText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtHotel1"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtText4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/txttext1"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/imgGoldenRetreat"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_marginTop="8dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/golden_retreat" />

                <Button
                    android:id="@+id/btnGoldenRetreat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/txtDetailTitle"
                    android:textColor="#FFFFFF"
                    android:textColorLink="#FFEB3B" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <!-- Hotel 2: Royal Plaza Hotel -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="#E0DBA7"
            app:cardBackgroundColor="#E0DBA7"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:id="@+id/txtText3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtHotel2"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtText4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/txtText2"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    tools:ignore="DuplicateIds" />

                <ImageView
                    android:id="@+id/imgRoyalPlaza"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_marginTop="8dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/royalplazahotel" />

                <Button
                    android:id="@+id/btnRoyalPlaza"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/btnBooking" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <!-- Hotel 3: Villa Resort Hotel -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E0DBA7"
            app:cardBackgroundColor="#E0DBA7"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:id="@+id/txtText5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtHotel3"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtText6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/txtText3"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/imgVilla"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_marginTop="8dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/villa_resort_hotel" />

                <Button
                    android:id="@+id/btnVilla"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/btnBooking" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>