<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e5c0fc">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="10dp">

        <TextView
            android:id="@+id/txtDetailsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/txtDetailTitle"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/img1"
                android:layout_width="match_parent"
                android:layout_height="192dp"
                android:layout_marginTop="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/golden_retreat" />

            <ImageView
                android:id="@+id/img2"
                android:layout_width="match_parent"
                android:layout_height="163dp"
                android:layout_marginTop="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/goldenretreat_room" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/txtHotel1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/txtHotel1"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingEnd="10dp"
                    android:text="@string/txtGoldenPrice"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingBottom="20dp"
                android:text="@string/txttext1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <!-- Date Selection Row -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#faf89b"
                android:orientation="horizontal"
                android:padding="10dp">



                <!-- Check-in Group -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingEnd="4dp">


                    <TextView
                        android:id="@+id/txtCheckin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/lblCheckin"
                        android:textColor="#000000"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btnCheckIn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:text="Select"
                        android:textColor="#000000" />
                </LinearLayout>

                <!-- Check-out Group -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtCheckOut"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/lblCheckOut"
                        android:textColor="#000000"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btnCheckOut"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:text="Select"
                        android:textColor="#000000" />

                </LinearLayout>

            </LinearLayout>


            <Button
                android:id="@+id/btnBooking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/btnBooking"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>

